# Fraud-Risk-Scoring-Engine

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  build.gradle  docker-compose.yml  gradle.properties  pyproject.toml  requirements.txt  settings.gradle
api/: build.gradle
api/src/main/java/com/riskengine/api/: ApiApplication.java
api/src/main/resources/: application.yml
common/: build.gradle
common/src/main/java/com/riskengine/common/config/: AppConfig.java
common/src/main/java/com/riskengine/common/model/: RiskScore.java  TransactionEvent.java
docker/: prometheus.yml
producer/: build.gradle
producer/src/main/java/com/riskengine/producer/: TransactionProducer.java
risk-engine/: build.gradle
risk-engine/src/main/java/com/riskengine/engine/: StreamingJob.java
risk-engine/src/main/resources/: logback.xml
src/config/: settings.py
